# src/scrum-daddy-be/common/api/response.go
@@ -1,0 +1,5 @@
+package api
+
+type CreateResponse struct {
+	Id any `json:"id"`
+}
